--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,12 @@
                 'main': './scripts/main.js',
                 'template-loader': './scripts/template-loader.js',
                 'puzzle': './scripts/models/puzzle-model.js',
+                'player': './scripts/models/player-model.js',
                 'requester': './scripts/requester.js',
                 'data':'./scripts/data.js',
                 'puzzle-controller':'./scripts/controllers/puzzle-controller.js',
                 'map-controller':'./scripts/controllers/map-controller.js',
+                'user-controller':'./scripts/controllers/user-controller.js',
 
                  //lib files
                 'jquery': './bower_components/jquery/dist/jquery.min.js',
