small fixes and jquery bower resolution

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script src="./systemjs/dist/system.js"></script>
 
     <script src="./bower_components/toastr/toastr.js"></script>
-    <script src="./crypto-js/crypto-js.js"></script>
+    <script src="./bower_components/crypto-js/crypto-js.js"></script>
     <script src="./bower_components/handlebars/handlebars.js"></script>
     <script src="./navigo/lib/navigo.js"></script>
 
