--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
+    <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./bower_components/toastr/toastr.css">
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -16,8 +20,11 @@
         </h1>-->
     </div>
     <script src="./systemjs/dist/system.js"></script>
+
+    <script src="./bower_components/toastr/toastr.js"></script>
+    <script src="./crypto-js/crypto-js.js"></script>
     <script src="./bower_components/handlebars/handlebars.js"></script>
-     <script src="./navigo/lib/navigo.js"></script>
+    <script src="./navigo/lib/navigo.js"></script>
 
     <script>
         SystemJS.config({
@@ -29,19 +36,16 @@
 
                 //app files
                 'main': './scripts/main.js',
-                'template-loader': './scripts/template-loader.js',
-                'puzzle': './scripts/models/puzzle-model.js',
-                'player': './scripts/models/player-model.js',
-                'requester': './scripts/requester.js',
-                'data':'./scripts/data.js',
+                'template-loader': './scripts/utils/template-loader.js',
+              //  'puzzle': './scripts/models/puzzle-model.js',
+                
+                'requester': './scripts/utils/requester.js',
+                'data':'./scripts/utils/data.js',
                 'puzzle-controller':'./scripts/controllers/puzzle-controller.js',
                 'map-controller':'./scripts/controllers/map-controller.js',
                 'user-controller':'./scripts/controllers/user-controller.js',
-
-                 //lib files
-                'jquery': './bower_components/jquery/dist/jquery.min.js',
-               // 'navigo':'../node_modules/navigo/lib/navigo.js',
-
+                'validator': './scripts/utils/validator.js',
+                
             }
         });
         System.import('main');
