--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,21 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./bower_components/toastr/toastr.css">
+    <link href="./css/fonts/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
     <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </head>
 
 <body>
+    <img id="logo" src="./css/images/background.jpg"/>
     <div id="root">
-        <!--  <h1 id="warning">
-            AWASIME SPA APP
-            <br> under construction
-        </h1>-->
     </div>
+    <footer>
+
+        <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Ftelerikacademy&amp;locale=en_US&width=500&height=100&colorscheme=light&layout=standard&action=like&show_faces=true&send=true"
+            scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
+    </footer>
     <script src="./systemjs/dist/system.js"></script>
     <script src="./bower_components/toastr/toastr.js"></script>
     <script src="./bower_components/crypto-js/crypto-js.js"></script>
